--- a/index.html
+++ b/index.html
@@ -242,6 +242,18 @@
             </a>
           </div>
 
+          <div class="student-card" id="ben-smith-card">
+            <a href="students/ben-smith.html">
+              <div class="view-profile-div">
+                <h3 class="view-profile-text">View Profile</h3>
+              </div>
+              <div class="card-text-container">
+                <h4 class="student-name">Ben Smith</h4>
+                <p class="student-location">Las Vegas, NV</p>
+              </div>
+            </a>
+          </div>
+
           <div class="student-card" id="aimee-carney-card">
             <a href="students/aimee-carney.html">
               <div class="view-profile-div">
