--- a/students/ben-smith.html
+++ b/students/ben-smith.html
@@ -56,8 +56,8 @@
               <h3>Experience</h3>
             </div>
             <div class="description-holder">
-              <h4>Lots of It</h4>
-              <h5>Orem, UT/Vernal, UT/Las Vegas, NV</h5>
+              <h4>Clark County School District/Jive Communications/Vernal School District</h4>
+              <h5>Las Vegas, NV/Orem, UT/Vernal,  UT</h5>
             </div>
             
           </div>
